{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 12,
  "lineage": "eec98cf3-2118-e3c7-ec05-4ff22701c79e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tummoc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486408064722:internet-gateway/igw-0fefc78512459ee47",
            "id": "igw-0fefc78512459ee47",
            "owner_id": "486408064722",
            "region": "us-east-1",
            "tags": {
              "Name": "tummoc-igw"
            },
            "tags_all": {
              "Name": "tummoc-igw"
            },
            "vpc_id": "vpc-0cee6e6ac0d461f4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tummoc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tummoc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486408064722:route-table/rtb-082021d0c465d278c",
            "id": "rtb-082021d0c465d278c",
            "owner_id": "486408064722",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fefc78512459ee47",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tummoc-public-rt"
            },
            "tags_all": {
              "Name": "tummoc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cee6e6ac0d461f4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "486408064722",
            "id": "rtb-082021d0c465d278c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.tummoc_igw",
            "aws_vpc.tummoc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tummoc_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089fc8bc28ca12f93",
            "region": "us-east-1",
            "route_table_id": "rtb-082021d0c465d278c",
            "subnet_id": "subnet-089d67dd30e09b96a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tummoc_igw",
            "aws_route_table.tummoc_public_rt",
            "aws_subnet.tummoc_public_subnet",
            "aws_vpc.tummoc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tummoc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486408064722:security-group/sg-076e40bd53e6631d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076e40bd53e6631d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Application Port",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tummoc-sg",
            "name_prefix": "",
            "owner_id": "486408064722",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tummoc-sg"
            },
            "tags_all": {
              "Name": "tummoc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cee6e6ac0d461f4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "486408064722",
            "id": "sg-076e40bd53e6631d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tummoc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tummoc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486408064722:subnet/subnet-089d67dd30e09b96a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089d67dd30e09b96a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "486408064722",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tummoc-public-subnet"
            },
            "tags_all": {
              "Name": "tummoc-public-subnet"
            },
            "vpc_id": "vpc-0cee6e6ac0d461f4f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "486408064722",
            "id": "subnet-089d67dd30e09b96a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.tummoc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tummoc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486408064722:vpc/vpc-0cee6e6ac0d461f4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059dbfe71a91a7b79",
            "default_route_table_id": "rtb-066e187c9bc6a72ff",
            "default_security_group_id": "sg-01f0fb68aabb60f10",
            "dhcp_options_id": "dopt-0588410d48b93213c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cee6e6ac0d461f4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066e187c9bc6a72ff",
            "owner_id": "486408064722",
            "region": "us-east-1",
            "tags": {
              "Name": "tummoc-vpc"
            },
            "tags_all": {
              "Name": "tummoc-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "486408064722",
            "id": "vpc-0cee6e6ac0d461f4f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}